Closed
Bug 1731060
Opened 4 years ago
Closed 4 years ago
Permanent js/src/vm/JSContext.cpp:1081:13: error: unused function 'IsOutOfMemoryException' [-Werror,-Wunused-function] when Gecko 94 merges to Beta on 2021-10-04
Categories
(Core :: JavaScript Engine, defect)
Core
JavaScript Engine
Tracking
()
VERIFIED
FIXED
94 Branch
| Tracking | Status | |
|---|---|---|
| firefox-esr78 | --- | unaffected |
| firefox-esr91 | --- | unaffected |
| firefox92 | --- | unaffected |
| firefox93 | --- | unaffected |
| firefox94 | blocking | verified |
People
(Reporter: aryx, Assigned: tcampbell)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
[task 2021-09-16T12:19:21.943Z] 2:52.93 /builds/worker/checkouts/gecko/js/src/vm/JSContext.cpp:1081:13: error: unused function 'IsOutOfMemoryException' [-Werror,-Wunused-function]
Since bug 1730426 the only caller of IsOutOfMemoryException is guarded by #if defined(NIGHTLY_BUILD) https://searchfox.org/mozilla-central/rev/4d90ff4537330d6b17cb956c0fadf759086d9bb7/js/src/vm/JSContext.cpp#1083-1116
Flags: needinfo?(tcampbell)
| Assignee | ||
Updated•4 years ago
|
Flags: needinfo?(tcampbell)
| Assignee | ||
Comment 1•4 years ago
|
||
The IsOutOfMemoryException helper is only used by the nightly error
interceptor, so guard with an ifdef.
Updated•4 years ago
|
Assignee: nobody → tcampbell
Status: NEW → ASSIGNED
Updated•4 years ago
|
Updated•4 years ago
|
Pushed by rvandermeulen@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/a9b76b17ba5c
Guard nightly-only symbols in JSContext.cpp. r=caroline
Comment 3•4 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 94 Branch
Comment 4•4 years ago
|
||
Verified fixed in latest beta sim https://treeherder.mozilla.org/jobs?repo=try&group_state=expanded&resultStatus=testfailed%2Cbusted%2Cexception%2Crunnable&revision=1fd18a7b648dc9da254850a69101a4ea0b8a3452
Status: RESOLVED → VERIFIED
Updated•4 years ago
|
Has Regression Range: --- → yes
You need to log in
before you can comment on or make changes to this bug.
Description
•