Bug 1731060 - Guard nightly-only symbols in JSContext.cpp. r=caroline

The `IsOutOfMemoryException` helper is only used by the nightly error
interceptor, so guard with an ifdef.

Differential Revision: https://phabricator.services.mozilla.com/D125854